--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.9.1",
     "@tanstack/react-query": "^4.0.10",
+    "date-fns": "^2.29.1",
     "jotai": "^1.7.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
