--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 VITE_BUDGET_ID=63381609-23d0-4007-b3a1-64c6f715fa9c
-VITE_OAUTH_SECRET=
-VITE_OAUTH_PUBLIC=
+VITE_OAUTH_PUBLIC=-QH9TXz52eBXmGPEc6UXpyqoLLsYSuSyrwuhgAqQ9lQ
+VITE_REDIRECT_URI=http://localhost:3000/oauth/callback
